fix: response APIs
