# CC/src/server/handlers/commentHandler.js
@@ -1,3 +1,4 @@
+const { error } = require('console');
 const { saveComment, deleteComment, getAllComments, getCommentById, getDiscussionById} = require('../../services/storeData');
 const crypto = require('crypto');
 
@@ -11,14 +12,20 @@ async function createComment(req, res, next) {
     const commentId = crypto.randomUUID();
   
     if (!discussion) {
-      return res.status(404).json({ status: 'fail', message: 'Discussion not found' });
+      return res.status(404).json({ 
+        error: true, 
+        message: 'Discussion not found' 
+      });
     }
   
     const creator = req.user.username;
     const creatorUid = req.user.uid;
   
-    if (!content || !creator) {
-      return res.status(400).json({ status: 'fail', message: 'Field content and creator are required' });
+    if (!content) {
+      return res.status(400).json({ 
+        error: true, 
+        message: 'Content is required to create a comment' 
+      });
     }
   
     const newComment = {
@@ -31,7 +38,11 @@ async function createComment(req, res, next) {
   
     try {
       await saveComment(discussionId, newComment);
-      res.status(201).json({ status: 'success', message: 'Comment created', data: newComment });
+      res.status(201).json({ 
+        error: false, 
+        message: 'Comment created successfully', 
+        data: newComment 
+      });
     } catch (error) {
       next(error);
     }
@@ -44,12 +55,19 @@ async function createComment(req, res, next) {
     const discussion = await getDiscussionById(discussionId);
   
     if (!discussion) {
-      return res.status(404).json({ status: 'fail', message: 'Discussion not found' });
+      return res.status(404).json({ 
+        error: true, 
+        message: 'Discussion not found' 
+      });
     }
   
     try {
       const comment = await getAllComments(discussionId)
-      res.status(200).json({ status: 'success', message: 'Get all comments', data: comment });
+      res.status(200).json({ 
+        error: false, 
+        message: 'All comments retrieved successfully', 
+        data: comment
+       });
     } catch (error) {
       next(error);
     }
@@ -61,7 +79,10 @@ async function createComment(req, res, next) {
   
     if (!req.user || !req.user.uid) {
       console.error('User not authenticated');
-      return res.status(400).json({ status: 'fail', message: 'User not authenticated' });
+      return res.status(400).json({ 
+        error: true, 
+        message: 'User not authenticated' 
+      });
     }
   
     const uid = req.user.uid;
@@ -70,24 +91,36 @@ async function createComment(req, res, next) {
   
     if (!discussion) {
       console.error('Discussion not found');
-      return res.status(404).json({ status: 'fail', message: 'Discussion not found' });
+      return res.status(404).json({ 
+        error: true, 
+        message: 'Discussion not found'
+      });
     }
   
     const comment = await getCommentById(discussionId, commentId);
   
     if (!comment) {
       console.error('Comment not found');
-      return res.status(404).json({ status: 'fail', message: 'Comment not found' });
+      return res.status(404).json({ 
+        error: true, 
+        message: 'Comment not found' 
+      });
     }
   
     if (comment.creatorUid !== uid) {
       console.error('User not authorized');
-      return res.status(403).json({ status: 'fail', message: 'You are not authorized' });
+      return res.status(403).json({ 
+        error: true, 
+        message: 'You are not authorized to delete this comment'
+      });
     }
   
     try {
       await deleteComment(discussionId, commentId);
-      res.status(200).json({ status: 'success', message: 'Comment deleted successfully' });
+      res.status(200).json({ 
+        error: false, 
+        message: 'Comment deleted successfully' 
+      });
     } catch (error) {
       next(error);
     }
